cmake_minimum_required(VERSION 3.0)
# root-level CMakeLists.txt, all project level initialization
# e.g. find_package(), include path, etc

# put it at the end
add_subdirectory(tutor_utils)
add_subdirectory(tutor_pointer)
add_subdirectory(tutor_linked_list)
add_subdirectory(tutor_graphs)
add_subdirectory(tutor_sorting)
add_subdirectory(tutor_primes)